hero&navbar text-align fixed

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -156,3 +156,10 @@
         flex-direction: column;
     }
 }
+
+@media screen and (max-width: 424px) {
+
+    .footer-items{
+        align-items: center;
+    }
+}
